--- a/templates/Estado.html
+++ b/templates/Estado.html
@@ -27,7 +27,7 @@
           </strong>
         </a>
         <nav class="nav">
-          <a class="nav-link active text-white fs-5" href="/templates/index.html">Home</a>
+          <a class="nav-link active text-white fs-5" href="/">Home</a>
         </nav>
       </div>
     </div>
