--- a/templates/Recentes.html
+++ b/templates/Recentes.html
@@ -40,12 +40,9 @@
       <div class="offcanvas-body">
         {% for estado in paginas_3 %}
         <div class="dropdown mt-3">
-          <a href="url_for('Estados',id=estado.get_id())"> 
+          <a href="url_for('Estados',id=estado.get_id())"class="btn btn-primary"> 
             <img style="width: 25px" src="{{estado.get_bandeira()}}">
-            <button class="btn btn-primary" type="button" id="dropdownMenuButton"
-              data-bs-toggle="dropdown">
-              {{estado.get_titulo()}}
-            </button>
+            {{estado.get_titulo()}}
           </a>
         </div>
         {% endfor %}
