--- a/templates/index.html
+++ b/templates/index.html
@@ -48,7 +48,7 @@
         {% for estado in paginas_3 %}
         <div class=" mt-3">
           <img style="width: 25px" src="{{estado.get_bandeira()}}">
-          <a href="{{url_for('Estados',id=estado.get_id())}}" style="text-decoration: none;">   
+          <a href="{{url_for('Estados',id=estado.get_id())}}" class="btn btn-primary">   
             {{estado.get_titulo()}}
           </a>
         </div>
