--- a/application/view/templates/manutencao.html
+++ b/application/view/templates/manutencao.html
@@ -52,7 +52,7 @@
     <main>
         <div class="main-container w-50 m-auto my-5">
             <div class="conteúdo d-flex flex-column">
-                <img src="/static/img/atenção.png">
+                <img class="w-50 my-5" src="/static/img/atenção.png">
                 <p class="font-weight-bold fs-4">Pagina em manutenção tente novamente mais tarde...</p>
             </div>
         </div>
