--- a/application/view/templates/Noticia.html
+++ b/application/view/templates/Noticia.html
@@ -41,7 +41,7 @@
         {% for bandeira in bandeiras_list %}
         <div class="dropdown mt-3">
         <img style="width: 25px" src="{{bandeira.get_bandeira()}}">
-          <a href="/Estado/{{bandeira.get_id()}}"class="btn btn-primary"> 
+          <a href="{{url_for('Estado', id=bandeira.get_id())}}"class="btn btn-primary"> 
             {{bandeira.get_titulo()}}
           </a>
         </div>
@@ -53,16 +53,14 @@
     <main>
         <div class="main-container w-50 m-auto my-5">
             <div class="conteúdo d-flex flex-column">
-                <h1>{{noticia.get_titulo()}}</h1>
+                <h1>{{noticias.get_titulo()}}</h1>
                 <div>
-                    <img class=" w-100" src="{{noticia.get_imagem()}}">
-                    <p class="font-weight-bold fs-4">{{noticia.get_conteudo()}}</p>
-                    <p class="font-weight-bold fs-4 my-5"> Compartilhar
-                        <a href="#"><img src="/static/img/share.svg" height="30" width="30" class="m-left"></a>
-                    </p>
-                    </div>
+                    <img class=" w-100" src="{{noticias.get_imagem()}}">
+                    <p class="font-weight-bold fs-4">{{noticias.get_conteudo()}}</p>
+                    <p class="font-weight-bold fs-4 my-5"> Compartilhar<a href="#"><img src="/static/img/share.svg" height="30" width="30" class="m-left"></a></p>
                 </div>
             </div>
+        </div>
         </main>
         <!--Footer-->
         <footer id="myFooter" class="footer my-5">
