--- a/application/view/templates/Noticia.html
+++ b/application/view/templates/Noticia.html
@@ -41,9 +41,7 @@
         {% for bandeira in bandeiras_list %}
         <div class="dropdown mt-3">
         <img style="width: 25px" src="{{bandeira.get_bandeira()}}">
-          <a href="{{url_for('Estado', id=bandeira.get_id())}}"class="btn btn-primary"> 
-            {{bandeira.get_titulo()}}
-          </a>
+          <a href="{{url_for('Estado', id=bandeira.get_id())}}"class="btn btn-primary">{{bandeira.get_titulo()}}</a>
         </div>
         {% endfor %}
       </div>
@@ -59,6 +57,33 @@
                     <p class="font-weight-bold fs-4">{{noticias.get_conteudo()}}</p>
                     <p class="font-weight-bold fs-4 my-5"> Compartilhar<a href="#"><img src="/static/img/share.svg" height="30" width="30" class="m-left"></a></p>
                 </div>
+            </div>
+            <div class="comentario">
+                <h3>Deixe seu comentario!</h3>
+                <form action="{{url_for('comentarios')}}" method="POST">
+                    <div class="form-group">
+                        <label for="exampleFormControlInput1">Nome</label>
+                        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Nome">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleFormControlTextarea1">Comentário</label>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" style="resize: none;"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Enviar</button>
+                </form>
+                {% for comentario in comentarios %}
+                <div class="d-flex flex-column">
+                    <div class="d-flex flex-row">
+                        <img src="{{comentario.get_imagem()}}" width="50" height="50" class="m-right">
+                        <div class="d-flex flex-column">
+                            <p class="font-weight-bold fs-4">{{comentario.get_usuario()}}</p>
+                            <p class="fs-4">{{comentario.get_conteudo()}}</p>
+                        </div>
+                    </div>
+                    <div class="d-flex flex-row">
+                        <p class="fs-4">{{comentario.get_data()}}</p>
+                    </div>
+                {% endfor %}
             </div>
         </div>
         </main>
