--- a/application/view/templates/Noticia.html
+++ b/application/view/templates/Noticia.html
@@ -9,6 +9,7 @@
         <link rel="icon" href="../static/img/icone.svg">
         <!--Fontawesome-->
         <script src="https://kit.fontawesome.com/a5ad30f95d.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet"href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"crossorigin="anonymous"/>
         <!--Bootstrap-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <!--Css-->
@@ -60,31 +61,34 @@
             </div>
             <div class="comentario">
                 <h3>Deixe seu comentario!</h3>
-                <form action="{{url_for('comentarios')}}" method="POST">
+                <form action="{{url_for('comentarios', id=noticias.get_id())}}" method="POST">
                     <div class="form-group">
                         <label for="exampleFormControlInput1">Nome</label>
-                        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Nome">
+                        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Nome" name="nome">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleFormControlTextarea1">Email</label>
+                        <input type="text" class="form-control" id="exampleFormControlTextarea1" placeholder="Email" name="email">
                     </div>
                     <div class="form-group">
                         <label for="exampleFormControlTextarea1">Comentário</label>
-                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" style="resize: none;"></textarea>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" style="resize: none;" name="conteudo"></textarea>
                     </div>
                     <button type="submit" class="btn btn-primary">Enviar</button>
                 </form>
-                {% for comentario in comentarios %}
-                <div class="d-flex flex-column">
+                {% for comentarios in comentario %}
+                <hr>
+                <div class="d-flex flex-column p-3" style="border: 1px solid #000;">
+                    <p class="font-weight-bold">De: {{comentarios.get_usuario()}}</p>
+                    <p class="font-weight-bold">Em: {{ comentarios.get_data() }}</p>
+                    <p class="font-weight-bold">Email: {{comentarios.get_email()}}</p>
                     <div class="d-flex flex-row">
-                        <img src="{{comentario.get_imagem()}}" width="50" height="50" class="m-right">
-                        <div class="d-flex flex-column">
-                            <p class="font-weight-bold fs-4">{{comentario.get_usuario()}}</p>
-                            <p class="fs-4">{{comentario.get_conteudo()}}</p>
+                        <div class="d-flex">
+                            <p>{{comentarios.get_conteudo()}}</p>
                         </div>
                     </div>
-                    <div class="d-flex flex-row">
-                        <p class="fs-4">{{comentario.get_data()}}</p>
-                    </div>
+                </div>
                 {% endfor %}
-            </div>
         </div>
         </main>
         <!--Footer-->
