--- a/application/view/templates/Recentes.html
+++ b/application/view/templates/Recentes.html
@@ -58,10 +58,41 @@
                     <p class="font-weight-bold fs-4 my-5"> Compartilhar
                         <a href="#"><img src="/static/img/share.svg" height="30" width="30" class="m-left"></a>
                     </p>
-                    </div>
                 </div>
             </div>
-        </main>
+            <div class="comentario">
+                <h3>Deixe seu comentario!</h3>
+                <form action="{{url_for('comentar', id=recentes.get_id())}}" method="POST">
+                    <div class="form-group">
+                        <label for="exampleFormControlInput1">Nome</label>
+                        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Nome" name="nome">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleFormControlTextarea1">Email</label>
+                        <input type="text" class="form-control" id="exampleFormControlTextarea1" placeholder="Email" name="email">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleFormControlTextarea1">Comentário</label>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" style="resize: none;" name="conteudo"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Enviar</button>
+                </form>
+                {% for comentarios in comentario %}
+                <hr>
+                <div class="d-flex flex-column p-3" style="border: 1px solid #000;">
+                    <p class="font-weight-bold">De: {{comentarios.get_usuario()}}</p>
+                    <p class="font-weight-bold">Em: {{ comentarios.get_data() }}</p>
+                    <p class="font-weight-bold">Email: {{comentarios.get_email()}}</p>
+                    <div class="d-flex flex-row">
+                        <div class="d-flex">
+                            <p>{{comentarios.get_conteudo()}}</p>
+                        </div>
+                    </div>
+                </div>
+                {% endfor %}
+        </div>
+        
+    </main>
         <!--Footer-->
         <footer id="myFooter" class="footer my-5">
             <div class="footer-social">
